--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -15,22 +15,23 @@
 					</svg>
 				</a>
 			</div>
-			<div class="footer__content content-footer">
-				<h4 class="content-footer__title">Наш продукт</h4>
+			<div data-spollers="767,max" class="footer__content content-footer">
+				<h4 data-spoller class="content-footer__title">Наш продукт</h4>
+
 				<ul class="content-footer__list">
 					<li class="content-footer__item"><a href="#" class="content-footer__link">Процесс</a></li>
 					<li class="content-footer__item"><a href="#" class="content-footer__link">Продукция</a></li>
 				</ul>
 			</div>
-			<div class="footer__content content-footer">
-				<h4 class="content-footer__title">Обслуживание</h4>
+			<div data-spollers="767,max" class="footer__content content-footer">
+				<h4 data-spoller class="content-footer__title">Обслуживание</h4>
 				<ul class="content-footer__list">
 					<li class="content-footer__item"><a href="#" class="content-footer__link">Клиенты</a></li>
 					<li class="content-footer__item"><a href="#" class="content-footer__link">Надёжность</a></li>
 				</ul>
 			</div>
-			<div class="footer__content content-footer">
-				<h4 class="content-footer__title">Компания</h4>
+			<div data-spollers="767,max" class="footer__content content-footer">
+				<h4 data-spoller class="content-footer__title">Компания</h4>
 				<ul class="content-footer__list">
 					<li class="content-footer__item"><a href="#" class="content-footer__link">О нас</a></li>
 					<li class="content-footer__item"><a href="#" class="content-footer__link">Связаться с нами</a></li>
