--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -19,22 +19,28 @@
 				<h4 data-spoller class="content-footer__title">Наш продукт</h4>
 
 				<ul class="content-footer__list">
-					<li class="content-footer__item"><a href="#" class="content-footer__link">Процесс</a></li>
-					<li class="content-footer__item"><a href="#" class="content-footer__link">Продукция</a></li>
+					<li data-goto-header data-goto="work" class="content-footer__item"><a href="#"
+							class="content-footer__link">Процесс</a></li>
+					<li data-goto-header data-goto="product" class="content-footer__item"><a href="#"
+							class="content-footer__link">Продукция</a></li>
 				</ul>
 			</div>
 			<div data-spollers="767,max" class="footer__content content-footer">
 				<h4 data-spoller class="content-footer__title">Обслуживание</h4>
 				<ul class="content-footer__list">
-					<li class="content-footer__item"><a href="#" class="content-footer__link">Клиенты</a></li>
-					<li class="content-footer__item"><a href="#" class="content-footer__link">Надёжность</a></li>
+					<li data-goto-header data-goto="comments" class="content-footer__item"><a href="#"
+							class="content-footer__link">Клиенты</a></li>
+					<li data-goto-header data-goto="reliability" class="content-footer__item"><a href="#"
+							class="content-footer__link">Надёжность</a></li>
 				</ul>
 			</div>
 			<div data-spollers="767,max" class="footer__content content-footer">
 				<h4 data-spoller class="content-footer__title">Компания</h4>
 				<ul class="content-footer__list">
-					<li class="content-footer__item"><a href="#" class="content-footer__link">О нас</a></li>
-					<li class="content-footer__item"><a href="#" class="content-footer__link">Связаться с нами</a></li>
+					<li data-goto-header data-goto="building" class="content-footer__item"><a href="#"
+							class="content-footer__link">О нас</a></li>
+					<li data-goto-header data-goto="optimization" class="content-footer__item"><a href="#"
+							class="content-footer__link">Связаться с нами</a></li>
 				</ul>
 			</div>
 		</div>
