--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
 		<main class="page">
 			<section data-watch="navigator" id="main" class="main">
 				<div class="main__container">
-					<h1 class="main__title">Умная доставка материалов для <br> сложных строительных площадок</h1>
+					<h1 class="main__title">Умная доставка материалов для <br> сложных строительных
+						площадок</h1>
 					<div class="main__buttons buttons">
-						<a href="#" class="button_dark">Заказать демо</a>
-						<a href="#" class="button_light">Подробнее</a>
+						<a data-popup="#placeOrder" href="#" class="button_dark">Заказать демо</a>
+						<a data-popup="#moreInfo" href="#" class="button_light">Подробнее</a>
 					</div>
 					<div class="main__city"><img src="@img/main/city.png" alt=""></div>
 					<div class="main__trucks"><img src="@img/main/trucks.png" alt=""></div>
@@ -33,13 +34,15 @@
 						<div class="row-promo__item">
 							<div class="row-promo__img"><img src="@img/promo-row/2.svg" alt=""></div>
 							<h3 class="row-promo__title">Снижение потерь</h3>
-							<p class="row-promo__text">Тщательно отслеживайте движение стройматериалов, чтобы избежать краж и
+							<p class="row-promo__text">Тщательно отслеживайте движение стройматериалов, чтобы избежать краж
+								и
 								повреждений.</p>
 						</div>
 						<div class="row-promo__item">
 							<div class="row-promo__img"><img src="@img/promo-row/3.svg" alt=""></div>
 							<h3 class="row-promo__title">Повышение безопасности</h3>
-							<p class="row-promo__text">Обеспечьте здоровье и благополучие людей, работающих на вашей площадке.
+							<p class="row-promo__text">Обеспечьте здоровье и благополучие людей, работающих на вашей
+								площадке.
 							</p>
 						</div>
 					</div>
@@ -55,11 +58,12 @@
 						разочарование.
 						Это означает, что вы действительно не контролируете ситуацию.</p>
 					<div class="building__img"><img src="@img/building/build.png" alt=""></div>
-					<h2 class="building__title">Пора навести порядок на вашей стройплощадке и взять под контроль свой проект
+					<h2 class="building__title">Пора навести порядок на вашей стройплощадке и взять под контроль свой
+						проект
 					</h2>
 				</div>
 			</section>
-			<section data-watch-once class="care">
+			<section class="care">
 				<div class="care__container">
 					<div class="care__content">
 						<h2 class="care__title">Мы заботимся о доставке на стройплощадку и о людях, которые на них
@@ -87,15 +91,18 @@
 				<div class="product__container">
 					<h2 class="product__title">Что такое СтройКонтроль?</h2>
 					<p class="product__text">СтройКонтроль - это интеллектуальная система управления доставкой,
-						предоставляющая информацию и контроль материалов на сложных строительных площадках в режиме реального
+						предоставляющая информацию и контроль материалов на сложных строительных площадках в режиме
+						реального
 						времени.</p>
 					<div class="product__info info-product">
 						<div class="info-product__item">
 							<div class="info-product__content">
 								<h3 class="info-product__title">Отслеживайте доставку по всей цепочке поставок</h3>
-								<p class="info-product__text">От поставщика до субподрядчика - вы всегда знаете, где находятся
+								<p class="info-product__text">От поставщика до субподрядчика - вы всегда знаете, где
+									находятся
 									ваши
-									материалы, благодаря чему обычные отходы уходят в прошлое и сокращаются несчастные случаи на
+									материалы, благодаря чему обычные отходы уходят в прошлое и сокращаются несчастные случаи
+									на
 									месте.</p>
 							</div>
 
@@ -106,7 +113,8 @@
 							<div class="info-product__content">
 								<h3 class="info-product__title">Оптимизируйте и контролируйте свое прибытие на место</h3>
 								<p class="info-product__text">Транспортные средства доставки прибывают в фиксированные
-									промежутки времени в заранее назначенные отсеки, где разгрузочное оборудование готово и ждет
+									промежутки времени в заранее назначенные отсеки, где разгрузочное оборудование готово и
+									ждет
 									их.</p>
 							</div>
 
@@ -115,9 +123,11 @@
 						<div class="info-product__item">
 							<div class="info-product__content">
 								<h3 class="info-product__title">Возьмите под контроль данные в режиме реального времени</h3>
-								<p class="info-product__text">Интеллектуальная отчетность дает вам возможность принимать решения
+								<p class="info-product__text">Интеллектуальная отчетность дает вам возможность принимать
+									решения
 									в зависимости от того, как обстоят дела в данный момент. Больше никаких ручных отчетов по
-									заливке бетона или ежемесячной проверки 10.000 накладных со счетами, все это доступно онлайн
+									заливке бетона или ежемесячной проверки 10.000 накладных со счетами, все это доступно
+									онлайн
 									без каких-либо усилий.</p>
 							</div>
 
@@ -141,7 +151,8 @@
 						<div class="content-delivery__item">
 							<div class="content-delivery__img"><img src="@img/delivery/2.svg" alt="Картинка"></div>
 							<h4 class="content-delivery__title">Утилизация отходов</h4>
-							<p class="content-delivery__text">Отходы контролируются и сортируются, а заполненность контейнеров
+							<p class="content-delivery__text">Отходы контролируются и сортируются, а заполненность
+								контейнеров
 								отслеживается в цифровом виде.</p>
 						</div>
 						<div class="content-delivery__item">
@@ -183,7 +194,8 @@
 						<div class="content-delivery__item">
 							<div class="content-delivery__img"><img src="@img/delivery/9.svg" alt="Картинка"></div>
 							<h4 class="content-delivery__title">Электрика и сантехника</h4>
-							<p class="content-delivery__text">Доставка осуществляется в точной последовательности для сложной
+							<p class="content-delivery__text">Доставка осуществляется в точной последовательности для
+								сложной
 								установки, что сокращает или устраняет необходимость в хранении.</p>
 						</div>
 					</div>
@@ -217,7 +229,8 @@
 							<div class="row-promo__img"><img src="@img/reliability/3.svg" alt=""></div>
 							<h3 class="row-promo__title">Улучшенное влияние на общество</h3>
 							<p class="row-promo__text">Уменьшаются проблемы с дорожным движением и шумовое загрязнение, что
-								улучшает жизнь местного сообщества. Улучшенное обращение с материалами и хранение означает, что
+								улучшает жизнь местного сообщества. Улучшенное обращение с материалами и хранение означает,
+								что
 								рабочие также лучше защищены.
 							</p>
 						</div>
@@ -231,7 +244,7 @@
 					</div>
 					<p class="more-reliability__text"><span>Надёжная конструкция</span> СтройКонтроль входит в стандартную
 						комплектацию.</p>
-					<a href="#" class="more-reliability__button button_light">Подробнее</a>
+					<a data-popup="#moreInfo" href="#" class="more-reliability__button button_light">Подробнее</a>
 				</div>
 			</div>
 			<section class="statistics">
@@ -241,7 +254,8 @@
 							<h2 class="statistics__title">Создан для строительства</h2>
 							<ul class="statistics__list">
 								<li class="statistics__item">Хорошо виден в любых условиях
-									<p class="statistics__text">Независимо от того, солнечно или темно, найдется подходящий режим
+									<p class="statistics__text">Независимо от того, солнечно или темно, найдется подходящий
+										режим
 										экрана</p>
 								</li>
 
@@ -262,8 +276,8 @@
 
 							</ul>
 							<div class="statistics__buttons buttons">
-								<a href="#" class="button_light">Заказать демо</a>
-								<a href="#" class="button_dark">Подробнее</a>
+								<a data-popup="#placeOrder" href="#" class="button_light">Заказать демо</a>
+								<a data-popup="#moreInfo" href="#" class="button_dark">Подробнее</a>
 							</div>
 						</div>
 						<div class="statistics__img"><img src="@img/statistics/statistics.png" alt="Статистика"></div>
@@ -273,7 +287,8 @@
 							<div class="row-promo__item">
 								<div class="row-promo__img"><img src="@img/statistics/1.svg" alt=""></div>
 								<h3 class="row-promo__title">Привлечение субподрядчика</h3>
-								<p class="row-promo__text">Для выполнения этой работы вам понадобятся ваши субподрядчики. У нас
+								<p class="row-promo__text">Для выполнения этой работы вам понадобятся ваши субподрядчики. У
+									нас
 									есть проверенный и надежный процесс для этого.</p>
 							</div>
 							<div class="row-promo__item">
@@ -285,7 +300,8 @@
 							<div class="row-promo__item">
 								<div class="row-promo__img"><img src="@img/statistics/3.svg" alt=""></div>
 								<h3 class="row-promo__title">100% соответствие</h3>
-								<p class="row-promo__text">У нас есть безупречный список обеспечения соответствия требованиям,
+								<p class="row-promo__text">У нас есть безупречный список обеспечения соответствия
+									требованиям,
 									которые необходимы вам для успешного выполнения проекта с помощью СтройКонтроль.
 								</p>
 							</div>
@@ -304,8 +320,10 @@
 						<ul class="work__list list-work">
 							<li class="list-work__title">
 								Заказать демо
-								<p class="list-work__text">Вы увидите презентацию, в которой подробно объясняется, как работает
-									СтройКонтроль для решения задач строительной логистики в таких сложных проектах, как ваш.</p>
+								<p class="list-work__text">Вы увидите презентацию, в которой подробно объясняется, как
+									работает
+									СтройКонтроль для решения задач строительной логистики в таких сложных проектах, как ваш.
+								</p>
 							</li>
 							<li class="list-work__title">
 								Согласование сделки
@@ -315,19 +333,21 @@
 							</li>
 							<li class="list-work__title">
 								Подготовка
-								<p class="list-work__text">Мы полностью обучаем вашу команду тому, как использовать систему, с
+								<p class="list-work__text">Мы полностью обучаем вашу команду тому, как использовать систему,
+									с
 									помощью онлайн-видеоуроков и обеспечиваем постоянную всестороннюю поддержку.</p>
 							</li>
 							<li class="list-work__title">
 								Внедрение и интеграция
 								<p class="list-work__text">Мы настраиваем программное обеспечение так, чтобы оно точно
-									моделировало вашу площадку, а затем помогаем вам интегрировать его с программным обеспечением
+									моделировало вашу площадку, а затем помогаем вам интегрировать его с программным
+									обеспечением
 									Business Intelligence для получения новых мощных аналитических данных.</p>
 							</li>
 						</ul>
 						<div class="work__buttons buttons">
-							<a href="#" class="button_dark">Заказать демо</a>
-							<a href="#" class="button_light">Подробнее</a>
+							<a data-popup="#placeOrder" href="#" class="button_dark">Заказать демо</a>
+							<a data-popup="#moreInfo" href="#" class="button_light">Подробнее</a>
 						</div>
 					</div>
 				</div>
@@ -361,7 +381,8 @@
 							<div class="content-delivery__item">
 								<div class="content-delivery__img"><img src="@img/comments/4.svg" alt="Картинка"></div>
 								<h4 class="content-delivery__title">Устойчивое развитие и безопасность</h4>
-								<p class="content-delivery__text">Способствует снижению выбросов CO2 и повышает безопасность на
+								<p class="content-delivery__text">Способствует снижению выбросов CO2 и повышает безопасность
+									на
 									месте</p>
 							</div>
 						</div>
@@ -370,9 +391,11 @@
 							<div class="comments__slider slider-comments swiper">
 								<div class="slider-comments__wrapper swiper-wrapper">
 									<div class="slider-comments__slide swiper-slide">
-										<p class="slider-comments__text" data-swiper-parallax="-100">Мы видим огромный потенциал в
+										<p class="slider-comments__text" data-swiper-parallax="-100">Мы видим огромный
+											потенциал в
 											таких решениях, как
-											СтройКонтроль, и хотим использовать их для улучшения наших строительных процессов.</p>
+											СтройКонтроль, и хотим использовать их для улучшения наших строительных процессов.
+										</p>
 										<div class="slider-comments__user" data-swiper-parallax="-300"
 											data-swiper-parallax-duration="1000">
 											<img src="@img/comments/avatar.png" alt="Аватар">
@@ -385,9 +408,11 @@
 										</div>
 									</div>
 									<div class="slider-comments__slide swiper-slide">
-										<p class="slider-comments__text" data-swiper-parallax="-100">Мы видим огромный потенциал в
+										<p class="slider-comments__text" data-swiper-parallax="-100">Мы видим огромный
+											потенциал в
 											таких решениях, как
-											СтройКонтроль, и хотим использовать их для улучшения наших строительных процессов.</p>
+											СтройКонтроль, и хотим использовать их для улучшения наших строительных процессов.
+										</p>
 										<div class="slider-comments__user" data-swiper-parallax="-300"
 											data-swiper-parallax-duration="1000">
 											<img src="@img/comments/avatar.png" alt="Аватар">
@@ -432,8 +457,8 @@
 					<h2 class="optimization__title">Готовы оптимизировать логистику доставки для вашего сложного проекта?
 					</h2>
 					<div class="optimization__buttons buttons">
-						<a href="#" class="button_dark">Заказать демо</a>
-						<a href="#" class="button_light">Подробнее</a>
+						<a data-popup="#placeOrder" href="#" class="button_dark">Заказать демо</a>
+						<a data-popup="#moreInfo" href="#" class="button_light">Подробнее</a>
 					</div>
 				</div>
 			</section>
@@ -441,6 +466,7 @@
 		@@include("html/footer.html",{
 		})
 	</div>
+	@@include('html/popup.html',{})
 	@@include("html/js.html",{
 	})
 </body>
