--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="header__container">
-		<a class="header__logo logo"><img src="@img/logo.svg" alt="">СТРОЙКОНТРОЛЬ</a>
+		<a class=" header__logo logo"><img src="@img/logo.svg" alt="">СТРОЙКОНТРОЛЬ</a>
 		<div class="header__menu menu">
 			<nav class="menu__body">
 				<ul class="menu__list">
@@ -19,7 +19,8 @@
 					</li>
 				</ul>
 			</nav>
-			<a href="#" data-da=".menu__body,991.98, last" class="header__button">Заказать демо</a>
+			<a data-popup="#placeOrder" href="#" data-da=".menu__body,991.98, last" class="header__button">Заказать
+				демо</a>
 			<button type="button" class="menu__icon icon-menu"><span></span></button>
 		</div>
 	</div>
